<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_recipe_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tv_recipe_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBackground"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:textColor="#000000"
        android:textSize="20sp">

    </TextView>
</ScrollView>
